--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -45,6 +45,12 @@ table.editable-table{
 #predifined-options select{
     width:200px;
 }
+#predifined-options{
+    max-height: 300px;
+    overflow-x: hidden;
+    display: block;
+    overflow-y: auto;
+}
 
 #new-cell-details .row>div{
     text-align: left;
@@ -301,7 +307,7 @@ table tr.tmp-cell:first-of-type>td.tmp-cell{
     margin-left: 0px;
     padding: 10px;
     background: #E9FFE8;
-    transition: opacity 0.2s, left 1s, visibility 1s;
+    transition: opacity 0.2s, left 0.5s, visibility 0.5s;
     animation-fill-mode: forwards;
 }
 
@@ -310,6 +316,6 @@ table tr.tmp-cell:first-of-type>td.tmp-cell{
     position: absolute;
     left: 0%;
     opacity:1;
-    transition: opacity 0.2s, left 1s;
+    transition: opacity 0.2s, left 0.5s;
     animation-fill-mode: forwards;
 }
