--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -319,3 +319,21 @@ table tr.tmp-cell:first-of-type>td.tmp-cell{
     transition: opacity 0.2s, left 0.5s;
     animation-fill-mode: forwards;
 }
+
+#form-filter-form{
+    position:relative
+}
+
+#form-filter-form ul{
+    position:relative!important;
+    width:100%;
+    padding-left: 0px;
+}
+#form-filter-form ul{
+    list-style:none;
+}
+
+#form-filter-form .form-filter-item{
+    padding: 1px 10px;
+    margin-bottom: 10px;
+}
