--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -337,3 +337,7 @@ table tr.tmp-cell:first-of-type>td.tmp-cell{
     padding: 1px 10px;
     margin-bottom: 10px;
 }
+
+#main-settings select{
+    width:150px;
+}
