--- a/css/style.css
+++ b/css/style.css
@@ -1036,13 +1036,24 @@ button>span.glyphicon{
 }
 
 
-#editEnum .row {
-    padding: 10px 0px;
+#editEnum .row ,
+#editColumn .row {
+    padding: 5px 0px;
 }
-#editEnum .row>div{
+#editEnum .row>div,
+#editColumn .row>div{
     text-align:left;
 }
 
 #enumsTable .edit-enum{
     margin-right: 5px;
+}
+
+#editColumn input[type="text"],
+#editColumn select{
+    width: 200px;
+}
+
+#column-form-data{
+    border: none;
 }
