--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -12,8 +12,13 @@
 
 .form-label{
     display: inline-block;
-    width: 100px;
+    width: 150px;
 }
+
+#configTable .form-label{
+    text-align: right;
+}
+
 table.editable-table{
     margin-bottom: 0px;
 }
