--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -23,6 +23,14 @@ table.editable-table{
     margin-bottom: 0px;
 }
 
+table.editable-table td>.bootstrap-select>button{
+    pointer-events: none;
+    cursor: default;
+}
+#table-settings{
+    min-height: 400px;
+}
+
 
 #form-builder-container table>tbody>tr>td {
     border-right: 1px solid #e9e9e9;
@@ -334,6 +342,17 @@ table tr.tmp-cell:first-of-type>td.tmp-cell{
     max-width: 300px;
 }
 
-.bootstrap-select .dropdown-menu.open{
-    max-width: 400px;
+.modal-body  .bootstrap-select .dropdown-menu.open{
+    max-width: 300px;
+}
+
+.modal-body .bootstrap-select .dropdown-menu.open ul{
+    max-width: 300px;
+    overflow: hidden;
+}
+
+.modal-body .bootstrap-select .dropdown-menu.open ul li a{
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
