--- a/css/forms/formbuilder.css
+++ b/css/forms/formbuilder.css
@@ -72,6 +72,7 @@ table.editable-table td>.bootstrap-select>button{
 #new-cell-details .row>div{
     text-align: left;
     padding-left: 15px;
+    padding-bottom: 1px;
 }
 #new-cell-details .row>div select,
 #new-cell-details .row>div input:not('[type="radio"]'){
